--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        File localPropertiesFile = rootProject.file("local.properties")
+        def props = new Properties()
+        localPropertiesFile.withInputStream { props.load(it) }
+        buildConfigField("String", "API_KEY", props.getProperty('apiKey', ""))
+
     }
 
     buildTypes {
