--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,9 @@ buildscript {
         coil_version = '2.2.2'
         junit_version = '4.13.2'
         ext_junit_version = '1.1.5'
-        mockito_kotlin_version = '4.1.0'
-        mockito_android_version = '5.1.1'
-        arch_testing_version = '2.2.0'
         espresso_version = '3.5.1'
+        turbine_version = '0.12.1'
+        mockk_version = '1.13.4'
     }
 
 }
